src/test/deca/context/valid/created/testInstanceOF/simpleInstanceOf.deca
// Description :
//    Test d'iinstanceOf
//
// Résultats :
//    ok

class A{}
{
    A x = null;
    if(x instanceof A){
        println("OK");
    }
    else{
        println("Oups");
    }
}